# semantic-robot-reasoning

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
action/: __init__.py  pick_and_place.py  test_ik_motion.py
dashboard/: __init__.py  app.py
docs/: README.md
perception/: stereo_localization.py
reasoning/: __init__.py  instruction_parsing.py  scene_recognition.py  vlm_client.py  vlm_pick_and_place.py
simulation/: build_scene.py  connection.py  geometry.py
tests/: test_geometry.py  test_instruction_parsing.py  test_pick_and_place.py  test_stereo_localization.py  test_vlm_pick_and_place.py
