[project]
name = "semantic-robot-reasoning"
version = "0.1.0"
description = "LLM-driven semantic reasoning for robot manipulation in simulation (master's thesis)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "coppeliasim-zmqremoteapi-client>=2.0",
    "numpy>=1.26",
    "opencv-python>=4.9",
    "ollama>=0.6",
    "gradio>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simulation", "perception", "reasoning", "action", "dashboard"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
